# EllipseUtils

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  EllipseUtils.sln  README.md  Test_EllipseUtils.sln  Test_EllipseUtils.vcxproj  Test_EllipseUtils.vcxproj.filters
EllipseFitToSvg/: CMakeLists.txt  EllipseFitToSvg.cpp  EllipseFitToSvg.vcxproj  EllipseFitToSvg.vcxproj.filters  EllipseFitToSvg_VS.vcxproj  EllipseFitToSvg_VS.vcxproj.filters  ReadMe.txt  ReadPoints.cpp  ReadPoints.h  Utilities.cpp  Utilities.h  WriteSvg.cpp  WriteSvg.h  cmake_install.cmake  optionparser.h  options.cpp  options.h  points1.txt  stdafx.cpp  stdafx.h
EllipseFitToSvg_VS/: EllipseFitToSvg_VS.cpp  EllipseFitToSvg_VS.vcxproj  EllipseFitToSvg_VS.vcxproj.filters  ReadMe.txt  stdafx.cpp
EllipseUtils/: EllipseUtils.vcxproj  ellipseBasicTypes.h  ellipseFit.h  ellipseUtilities.h  ellipseUtils.h  ellipseparams.h  testmain.cpp
Test/: runtests.sh  runtests_windows.cmd
Test/Data/: coordinates_1.txt
Test_EllipseUtils/: CMakeLists.txt  Test_EllipseUtils.cpp  Test_EllipseUtils.sln  Test_EllipseUtils.vcxproj  Test_EllipseUtils.vcxproj.filters  optionparser.h  options.cpp  options.h  stdafx.cpp  stdafx.h
